--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "npm install && (cd client && npm run build)",
-    "vercel-build": "npm run build"
+    "vercel-build": "npm install"
   },
   "keywords": [],
   "author": "",
